--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ DBDIALECT = "postgres"
 SERVERNAME = "postgres"
 DB_PORT = "5432"
 
-FE_URL = "http://localhost:8081"
+FE_URL = "http://192.168.100.23:8081"
